# git-buoy

./: AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: accessibility-compatibility.yml  bug.yml  config.yml  feature.yml
.github/workflows/: ci.yml  release-acceptance.yml  release.yml
.interface-design/: system.md
docs/: case-study.md  live-events.md  profiling.md  release-acceptance.md  releasing.md
docs/adr/: 0001-implementation-stack.md
docs/profiles/: linux-bookworm-2026-07-13.json  macos-2026-07-13.json
docs/release-notes/: v0.1.0.md
examples/: capture_demo.rs
scripts/: demo.sh  profile.py
src/: app.rs  config.rs  lib.rs  main.rs
src/git/: collector.rs  mod.rs  snapshot.rs
src/harbor/: animation.rs  mapping.rs  mod.rs  model.rs
src/hosting/: github.rs  mod.rs  model.rs
src/ui/: inspect.rs  legend.rs  mod.rs  scene.rs  settings.rs  theme.rs
tests/: mapping.rs
tools/release-acceptance/: Cargo.toml
tools/release-acceptance/src/: main.rs
